# frameforge

./: CHANGELOG.md  package.xml  pyproject.toml
freecad/frameforge/: InitGui.py  _utils.py  create_bom.py  create_bom_tool.py  create_custom_profiles_tool.py  create_edit_balloons_tool.py  create_profiles_tool.py  create_trimmed_profiles_tool.py  edit_profile_tool.py  extruded_cutout.py  populate_ids.py  populate_ids_tool.py  profile.py  trimmed_profile.py
freecad/frameforge/resources/ui/: create_custom_profiles.ui  create_profiles2.ui
