[project]
name = "frameforge"
version = "0.2.0"
description = "FrameForge is dedicated for creating Frames and Beams, and apply operations (miter cuts, trim cuts) on these profiles."
authors = [
    {name = "Vivien HENRY", email = "vivien.henry@inductivebrain.fr"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "freecad" },
    { include = "freecad.frameforge" },
]

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120 # Default is usually 88, setting it higher initially.
target-version = ['py311'] # Apparently this is what freecad supports.

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120 # Default is usually 88, setting it higher initially.